[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Border.gd" type="Script" id=1]
[ext_resource path="res://Tiles/CityMeshes/Building Meshes/Building 1.material" type="Material" id=2]

[node name="Border" type="Spatial"]
script = ExtResource( 1 )

[node name="N_Wall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.56231 )
width = 20.0
height = 30.0
material = ExtResource( 2 )

[node name="W_Wall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.1494, 0, -7.5978 )
width = 20.0
height = 30.0
material = ExtResource( 2 )

[node name="S_Wall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16.1578 )
width = 20.0
height = 30.0
material = ExtResource( 2 )

[node name="E_Wall" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.03156, 0, -7.4022 )
width = 20.0
height = 30.0
material = ExtResource( 2 )
